# Continuum

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_TAB_INTENT.md  DESIGN.md  NOTICE  README.md  TODO.md  TODOS.md  VERSION  index.html  privacy.html  support.html
.github/: PULL_REQUEST_TEMPLATE.md
apple/: .xcode.env  Gemfile  README.md  project.yml
docs/: BUG-AUDIT-2026-05-23.md  BUG-AUDIT-2026-06-05.md  BUG-AUDIT-2026-06-06-main.md  BUG-AUDIT-2026-06-06.md  CODE-TAB-RELEASE-AUDIT-2026-06-09.md  CODE_TAB_AUDIT.md  CODE_TAB_PROVIDER_MATRIX.md  agentapi-event-catalog.md  agentapi-runtime-notes.md  button-wiring-audit.md  clawdmeter-competitive-analysis-report.html  clawdmeter-competitive-analysis-report.md  competitive_analysis.md  go-to-market-strategy-mobile-first-ide.html  go-to-market-strategy-mobile-first-ide.md  index.html  known-limitations.md  opencode-research-2026-05-22.md  privacy.html  privacy.md  protocol-wire-version-history.md  roadmap-2026-q2.html  roadmap-2026-q2.md  security.md  terms.html
infra/: README.md  RESUME-APNS.md  SECRETS.md
linux/: .gitignore  Package.swift  README.md
script/: run_code_tab_unit_checks.sh
tools/: build-bundled-open-design.sh  build-linux-appimage.sh  build-linux-deb.sh  build-mac-dmg.sh  clawdmeter-logs.sh  cloudflare-ci-auth.sh  download-bundled-fff.sh  download-bundled-node.sh  download-bundled-opencode.sh  (+14 more)
tools/clawdmeter-agents/: README.md  cost_pulse_watcher.py  main.py  observer.py  pyproject.toml  repo_context_extractor.py  session_summarizer.py
tools/clawdmeter-agents/tests/: conftest.py  test_main.py
(+1303 files in other folders)
